added jre8test profile