@@ -125,7 +125,6 @@
 			<version>${bouncycastle.bcprov.version}</version>
 			<optional>true</optional>
 		</dependency>
-		
 		<!-- dependencies for Client Certificate Authentication -->
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
@@ -133,8 +132,6 @@
 			<version>${bouncycastle.bcpkix.version}</version>
 			<optional>true</optional>
 		</dependency>
-
-
 		<!-- dependencies provided by an OSGi-Framework -->
 		<dependency>
 			<groupId>org.osgi</groupId>
@@ -278,6 +275,43 @@
 						<configuration>
 							<!-- Exclude [xJDBC42] For tests not compatible with JDBC 4.2 Specifications -->
 							<excludedGroups>${excludedGroups}, xJDBC42</excludedGroups>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>jre8test</id>
+			<build>
+				<finalName>${project.artifactId}-${project.version}.jre8${releaseExt}</finalName>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.0</version>
+						<configuration>
+							<skipMain>true</skipMain>
+							<useIncrementalCompilation>false</useIncrementalCompilation>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.0.0-M1</version>
+						<configuration>
+							<!-- Exclude [xJDBC42] For tests not compatible with JDBC 4.2 Specifications -->
+							<excludedGroups>${excludedGroups}, xJDBC42</excludedGroups>
+							<forkCount>3</forkCount>
+							<reuseForks>true</reuseForks>
+							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-enforcer-plugin</artifactId>
+						<version>3.0.0-M2</version>
+						<configuration>
+							<skip>true</skip>
 						</configuration>
 					</plugin>
 				</plugins>
